--- a/index.html
+++ b/index.html
@@ -5,84 +5,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400,500,900;1,100..900&display=swap"
+            rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+        <nav class="nav">
+            <a class="logo" href="./index.html"><span class="logo_name">Web</span>Studio</a>
+            <ul class="nav_item">
+                <li><a class="nav_link" href="#">Studio</a></li>
+                <li><a class="nav_link" href="#">Portfolio</a></li>
+                <li><a class="nav_link" href="#">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="address">
+            <ul class="address_item">
+                <li><a class="address_link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address_link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero_name">Effective Solutions for Your Business</h1>
+            <button class="hero_button" type="button">Order Service</button>
         </section>
 
-        <section>
+        <section class="features">
             <h2 hidden>Features</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+            <ul class="features_item">
+                <li class="features_link">
+                    <h3 class="features_name">Strategy</h3>
+                    <p class="features_description">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="features_link">
+                    <h3 class="features_name">Punctuality</h3>
+                    <p class="features_description">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.
                     </p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="features_link">
+                    <h3 class="features_name">Diligence</h3>
+                    <p class="features_description">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                <li class="features_link">
+                    <h3 class="features_name">Technologies</h3>
+                    <p class="features_description">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li><img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team_logo">Our Team</h2>
+            <ul class="team_item">
+                <li><img class="team_photo" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+                    <h3 class="team_name">Mark Guerrero</h3>
+                    <p class="team_descrition">Product Designer</p>
                 </li>
-                <li><img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li><img class="team_photo" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
+                    <h3 class="team_name">Tom Ford</h3>
+                    <p class="team_descrition">Frontend Developer</p>
                 </li>
-                <li><img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li><img class="team_photo" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
+                    <h3 class="team_name">Camila Garcia</h3>
+                    <p class="team_descrition">Marketing</p>
                 </li>
-                <li><img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li><img class="team_photo" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
+                    <h3 class="team_name">Daniel Wilson</h3>
+                    <p class="team_descrition">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="portfolio">
+            <h2 class="portfolio_logo">Our Portfolio</h2>
+            <ul class="portfolio_item">
+                <li><img class="portfolio_photo" src="images/backing_app.jpg" alt="A picture with a website mockup." width="360">
+                    <h3 class="porfolio_name">Banking App</h3>
+                    <p class="portfolio_description">App</p>
+                </li>
+                <li><img class="portfolio_photo" src="images/cashless.jpg" alt="An image of a phone scanning a QR code." width="360">
+                    <h3 class="porfolio_name">Cashless Payment</h3>
+                    <p class="portfolio_description">Marketing</p>
+                </li>
+                <li><img class="portfolio_photo" src="images/maditation.jpg" alt="image with a notebook and a phone" width="360">
+                    <h3 class="porfolio_name">Meditation App</h3>
+                    <p class="portfolio_description">App</p>
+                </li>
+                <li><img class="portfolio_photo" src="images/taxi_service.jpg" alt="image with a car" width="360">
+                    <h3 class="porfolio_name">Taxi Service</h3>
+                    <p class="portfolio_description">Marketing</p>
+                </li>
+                <li><img class="portfolio_photo" src="images/screen_ill.jpg" alt="a picture with a phone" width="360">
+                    <h3 class="porfolio_name">Screen Illustrations</h3>
+                    <p class="portfolio_description">Design</p>
+                </li>
+                <li><img class="portfolio_photo" src="images/online_coursice.jpg" alt="image with a girl" width="360">
+                    <h3 class="porfolio_name">Online Courses</h3>
+                    <p class="portfolio_description">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="logo" href="./index.html"><span class="logo_name">Web</span><span class="logo_sec_name">Studio</span></a>
+        <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
