--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,11 +22,11 @@
 <body>
     <header>
         <nav class="nav">
-            <a class="logo" href="./index.html"><span class="logo_name">Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<Studio class="logo_name">Studio</span></a>
             <ul class="nav_item">
-                <li><a class="nav_link" href="#">Studio</a></li>
-                <li><a class="nav_link" href="#">Portfolio</a></li>
-                <li><a class="nav_link" href="#">Contacts</a></li>
+                <li><a class="nav_link" href="">Studio</a></li>
+                <li><a class="nav_link" href="">Portfolio</a></li>
+                <li><a class="nav_link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
@@ -73,19 +73,19 @@
         <section class="team">
             <h2 class="team_logo">Our Team</h2>
             <ul class="team_item">
-                <li><img class="team_photo" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+                <li class="team_block"><img class="team_photo" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                     <h3 class="team_name">Mark Guerrero</h3>
                     <p class="team_descrition">Product Designer</p>
                 </li>
-                <li><img class="team_photo" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
+                <li class="team_block"><img class="team_photo" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
                     <h3 class="team_name">Tom Ford</h3>
                     <p class="team_descrition">Frontend Developer</p>
                 </li>
-                <li><img class="team_photo" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
+                <li class="team_block"><img class="team_photo" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
                     <h3 class="team_name">Camila Garcia</h3>
                     <p class="team_descrition">Marketing</p>
                 </li>
-                <li><img class="team_photo" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
+                <li class="team_block"><img class="team_photo" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                     <h3 class="team_name">Daniel Wilson</h3>
                     <p class="team_descrition">UI Designer</p>
                 </li>
@@ -95,27 +95,27 @@
         <section class="portfolio">
             <h2 class="portfolio_logo">Our Portfolio</h2>
             <ul class="portfolio_item">
-                <li><img class="portfolio_photo" src="images/backing_app.jpg" alt="A picture with a website mockup." width="360">
+                <li><img class="portfolio_photo" src="./images/backing_app.jpg" alt="A picture with a website mockup." width="360">
                     <h3 class="porfolio_name">Banking App</h3>
                     <p class="portfolio_description">App</p>
                 </li>
-                <li><img class="portfolio_photo" src="images/cashless.jpg" alt="An image of a phone scanning a QR code." width="360">
+                <li><img class="portfolio_photo" src="./images/cashless.jpg" alt="An image of a phone scanning a QR code." width="360">
                     <h3 class="porfolio_name">Cashless Payment</h3>
                     <p class="portfolio_description">Marketing</p>
                 </li>
-                <li><img class="portfolio_photo" src="images/maditation.jpg" alt="image with a notebook and a phone" width="360">
+                <li><img class="portfolio_photo" src="./images/maditation.jpg" alt="image with a notebook and a phone" width="360">
                     <h3 class="porfolio_name">Meditation App</h3>
                     <p class="portfolio_description">App</p>
                 </li>
-                <li><img class="portfolio_photo" src="images/taxi_service.jpg" alt="image with a car" width="360">
+                <li><img class="portfolio_photo" src="./images/taxi_service.jpg" alt="image with a car" width="360">
                     <h3 class="porfolio_name">Taxi Service</h3>
                     <p class="portfolio_description">Marketing</p>
                 </li>
-                <li><img class="portfolio_photo" src="images/screen_ill.jpg" alt="a picture with a phone" width="360">
+                <li><img class="portfolio_photo" src="./images/screen_ill.jpg" alt="a picture with a phone" width="360">
                     <h3 class="porfolio_name">Screen Illustrations</h3>
                     <p class="portfolio_description">Design</p>
                 </li>
-                <li><img class="portfolio_photo" src="images/online_coursice.jpg" alt="image with a girl" width="360">
+                <li><img class="portfolio_photo" src="./images/online_coursice.jpg" alt="image with a girl" width="360">
                     <h3 class="porfolio_name">Online Courses</h3>
                     <p class="portfolio_description">Marketing</p>
                 </li>
@@ -123,7 +123,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="./index.html"><span class="logo_name">Web</span><span class="logo_sec_name">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo_sec_name">Studio</span></a>
         <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
