--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="nav">
             <a class="logo" href="./index.html">Web<span class="logo_name">Studio</span></a>
             <ul class="nav_item">
-                <li><a class="nav_link" href="">Studio</a></li>
+                <li><a class="nav_link" href="./index.html">Studio</a></li>
                 <li><a class="nav_link" href="">Portfolio</a></li>
                 <li><a class="nav_link" href="">Contacts</a></li>
             </ul>
