--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div class="container">
         <nav class="nav">
             <a class="logo" href="./index.html">Web<span class="logo_name">Studio</span></a>
             <ul class="nav_item">
@@ -35,6 +36,7 @@
                 <li><a class="address_link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
         <section class="hero">
