--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <header class="header">
         <div class="container">
+            <div class="nav_cont">
         <nav class="nav">
             <a class="logo" href="./index.html">Web<span class="logo_name">Studio</span></a>
             <ul class="nav_item">
@@ -36,6 +37,7 @@
                 <li><a class="address_link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+    </div>
         </div>
     </header>
     <main>
@@ -81,26 +83,26 @@
             <h2 class="team_logo">Our Team</h2>
             <ul class="team_item">
                 <li class="team_block"><img class="team_photo" src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <div class="name_peronal">
+                    <div class="name_personal">
                         <h3 class="team_name">Mark Guerrero</h3>
                         <p class="team_descrition">Product Designer</p>
                     </div>
                     
                 </li>
                 <li class="team_block"><img class="team_photo" src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
-                    <div class="name_peronal">
+                    <div class="name_personal">
                         <h3 class="team_name">Tom Ford</h3>
                         <p class="team_descrition">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="team_block"><img class="team_photo" src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <div class="name_peronal">
+                    <div class="name_personal">
                         <h3 class="team_name">Camila Garcia</h3>
                         <p class="team_descrition">Marketing</p>
                     </div>
                 </li>
                 <li class="team_block"><img class="team_photo" src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <div class="name_peronal"><h3 class="team_name">Daniel Wilson</h3>
+                    <div class="name_personal"><h3 class="team_name">Daniel Wilson</h3>
                     <p class="team_descrition">UI Designer</p>
                 </div>
                 </li>
