--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-            <div class="nav_cont">
+            <div class="container">
         <nav class="nav">
             <a class="logo" href="./index.html">Web<span class="logo_name">Studio</span></a>
             <ul class="nav_item">
