--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
                 <h2 class="visually_hidden">Features</h2>
                     <ul class="features_item">
                         <li class="features_link">
-                            <div class="features_cont">
-
-                            </div>
                             <div class="icon_features">
                                 <svg  width="64" height="64">
                                     <use href="./images/icons.svg#icon-antenna"></use>
@@ -359,8 +356,8 @@
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
-            </li class="footer_item">
-            <li><a href="https://x.com/?lang=ru&mx=2" target="_blank" class="link">
+            </li>
+            <li class="footer_item"><a href="https://x.com/?lang=ru&mx=2" target="_blank" class="link">
                     <svg class="icon_team" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
