--- a/index.html
+++ b/index.html
@@ -441,17 +441,16 @@
                </div>
                 <div class="form_con_comment">
                     <label class="form_label" for="user-comment">
-                        <span class="label_text">Comment</span>
+                        <span class="label_text">Comment</span></label>
                         <textarea class="form_input comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
-                    </label>
                 </div>
                 
                 <div class="form_con_checkbox">
-                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually_hidden">
+                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="form_check visually_hidden">
                     <label class="form_label_checkbox" for="user-privacy">
                         <span class="label_chb_span">
                             <svg class="icon_checkbox" width="10" height="8">
-                              <use href="./images/icons.svg#icon-checkbox"></use>
+                              <use href="./images/icons.svg#icon-done"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a href="" class="form_checkbox_link">Privacy Policy</a>
