--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <section class="features">
             <div class="container">
-                <h2 class="visually_hidden">Features</h2>
+                <h2 class="visually-hidden">Features</h2>
                     <ul class="features_item">
                         <li class="features_link">
                             <div class="icon_features">
@@ -446,7 +446,7 @@
                 </div>
                 
                 <div class="form_con_checkbox">
-                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="form_check visually_hidden">
+                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="form_check visually-hidden">
                     <label class="form_label_checkbox" for="user-privacy">
                         <span class="label_chb_span">
                             <svg class="icon_checkbox" width="10" height="8">
