--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     </nav>
                     <address class="address_mob">
                         <ul class="address_list_mob">
-                            <li class="address-item-mob "><a class="address_link_mob current" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li class="address-item-mob"><a class="address_link_mob" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                            <li class="address-item-mob "><a class="address_link_mob " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="address-item-mob"><a class="address_link_mob current" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                         </ul>
                     </address>
                     <ul class="menu_list">
